# AudioVideoSample

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/jiahuan/android/audiovideosample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h  codec.h  codec_id.h  vdpau.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: avutil.h  base64.h  bprint.h  common.h  error.h  ffversion.h  hdr_dynamic_metadata.h  hwcontext_dxva2.h  mem.h
app/src/main/cpp/include/libswscale/: swscale.h
app/src/main/cpp/player/: Entry.cpp  Entry.h  FFAudioData.cpp  FFAudioData.h  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFFrameData.cpp  FFFrameData.h  FFPacketData.cpp  FFPacketData.h  FFParameter.cpp  FFParameter.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObservable.h  IObserver.cpp  IObserver.h  IVideoView.cpp  IVideoView.h  MediaPlayer.cpp  MediaPlayer.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XFrameData.cpp  XFrameData.h  XLog.h  XPacketData.cpp  XPacketData.h  XParameter.cpp  XParameter.h  (+7 more)
app/src/main/cpp/player/decoder/: BaseDecoder.cpp  BaseDecoder.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/player/render/: AudioRender.cpp  AudioRender.h  VideoRender.cpp  VideoRender.h
app/src/main/cpp/util/: GLUtil.cpp  GLUtil.h  ImageDef.h  log_util.h
app/src/main/java/me/jiahuan/android/audiovideosample/: MainActivity.kt  VideoOnlyActivity.kt
app/src/main/java/me/jiahuan/android/audiovideosample/camera/: Camera.kt  CameraActivity.kt  CameraFBORender.kt  CameraFBORenderer.kt  CameraRender.kt  CameraRenderer.kt  CameraView.kt  MediaEncoder.kt  SurfaceDrawThread.kt  SurfaceRenderer.kt
app/src/main/java/me/jiahuan/android/audiovideosample/egl/: EGLHelper.kt  EGLRenderer.kt  EGLSurfaceView.kt  EGLThread.kt  OpenglESActivity.kt  OpenglESRenderer.kt  OpenglESView.kt  WlGLRender.kt  WlGLSurafaceView.kt
app/src/main/java/me/jiahuan/android/audiovideosample/encoder/: MediaEncoder.kt  (+3 more)
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_opengles.xml  activity_screen.xml  activity_texture.xml  activity_video_only.xml  layout_activity_ffmpeg.xml  layout_activity_main.xml
app/src/main/res/raw/: vertex_camera_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/me/jiahuan/android/audiovideosample/: ExampleUnitTest.kt
ffmpeg/: ffmpeg_log.c
gradle/wrapper/: gradle-wrapper.properties
(+22 files in other folders)
